# nym

./: Cargo.toml  README.md
.github/workflows/: continuous-integration.yml  release.yml
nym/: Cargo.toml
nym-bin/: Cargo.toml
nym-bin/src/: option.rs
nym-cli/: Cargo.toml
nym-cli/src/: main.rs  terminal.rs
nym/src/: actuator.rs  fmt.rs  lib.rs  manifest.rs  policy.rs  text.rs  transform.rs
nym/src/glob/: mod.rs  rule.rs  token.rs
nym/src/pattern/: from.rs  mod.rs
nym/src/pattern/to/: mod.rs  token.rs
pkg/scoop/: nym.json
src/: actuator.rs  edit.rs  environment.rs  fmt.rs  glob.rs  lib.rs  main.rs  manifest.rs  memoize.rs  move.rs  path.rs  pattern.rs  policy.rs  transform.rs  ui.rs
src/glob/: capture.rs  mod.rs  token.rs
src/pattern/: from.rs  mod.rs  to.rs
src/pattern/to/: mod.rs  token.rs
