[package]
name = "nym"
version = "0.0.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]

[[bin]]
name = "nym"

[dependencies]
anyhow = "^1.0.0"
bimap = "^0.5.0"
blake3 = "^0.3.0"
bstr = "^0.2.0"
console = "^0.13.0"
dialoguer = "^0.7.0"
faccess = "^0.2.3"
filetime = "^0.2.0"
fool = "=0.0.4"
indicatif = "^0.15.0"
itertools = "^0.9.0"
lazy_static = "^1.4.0"
nom = "^6.0.0"
regex = "^1.4.0"
smallvec = "^1.5.0"
structopt = "^0.3.0"
textwrap = "^0.13.0"
thiserror = "^1.0.0"
walkdir = "^2.3.0"

[target.'cfg(target_os = "windows")'.dependencies.path-slash]
version = "^0.1.0"
