[package]
name = "nym-bin"
version = "0.0.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Append, copy, link, and move files using patterns."
repository = "https://github.com/olson-sean-k/nym"
readme = "../README.md"
edition = "2018"
license = "MIT"
keywords = [
    "glob",
    "pattern",
    "regex"
]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "filesystem"
]

[[bin]]
name = "nym"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.0"
console = "^0.13.0"
dialoguer = "^0.7.0"
indicatif = "^0.15.0"
itertools = "^0.10.0"
lazy_static = "^1.4.0"
structopt = "^0.3.0"
textwrap = "^0.13.0"
thiserror = "^1.0.0"

[dependencies.nym]
path = "../nym"
