[package]
name = "nym-cli"
version = "0.1.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Manipulate files en masse using patterns."
repository = "https://github.com/olson-sean-k/nym"
readme = "../README.md"
edition = "2018"
license = "MIT"
keywords = [
    "glob",
    "pattern",
    "regex"
]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "filesystem"
]

[[bin]]
name = "nym"
path = "src/main.rs"

[features]
default = [
    'property-b3sum',
    'property-md5sum',
]
property-b3sum = ['nym/property-b3sum']
property-md5sum = ['nym/property-md5sum']

[dependencies]
anyhow = "^1.0.0"
console = "^0.14.0"
dialoguer = "^0.8.0"
indicatif = "^0.15.0"
itertools = "^0.10.0"
lazy_static = "^1.4.0"
structopt = "^0.3.0"
textwrap = "^0.14.2"
thiserror = "^1.0.0"

[dependencies.lscolors]
version = "^0.7.0"
default-features = false

[dependencies.nym]
version = "^0.1.0"
path = "../nym"
