[package]
name = "nym"
version = "0.0.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Append, copy, link, and move files using patterns."
repository = "https://github.com/olson-sean-k/nym"
readme = "../README.md"
edition = "2018"
license = "MIT"
keywords = [
    "glob",
    "pattern",
    "regex"
]
categories = [
    "filesystem"
]

[features]
default = [
    'property-b3sum',
    'property-ts'
]
property-b3sum = ['blake3']
property-ts = ['filetime']

[dependencies]
bimap = "^0.6.0"
bstr = "^0.2.0"
faccess = "^0.2.0"
itertools = "^0.10.0"
nom = "^6.1.0"
os_str_bytes = "^2.4.0"
regex = "^1.4.0"
smallvec = "^1.5.0"
thiserror = "^1.0.0"
unicode-width = "^0.1.0"
walkdir = "^2.3.0"

[dependencies.blake3]
version = "^0.3.0"
optional = true

[dependencies.filetime]
version = "^0.2.0"
optional = true

[target.'cfg(target_os = "windows")'.dependencies.path-slash]
version = "^0.1.0"
