[package]
name = "nym"
version = "0.1.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Manipulate files en masse using patterns."
repository = "https://github.com/olson-sean-k/nym"
readme = "../README.md"
edition = "2021"
rust-version = "1.56.0"
license = "MIT"
keywords = [
    "glob",
    "pattern",
    "regex"
]
categories = ["filesystem"]

[features]
default = [
    'property-b3sum',
    'property-md5sum',
]
property-b3sum = ['blake3']
property-md5sum = ['md5']

[dependencies]
bimap = "^0.6.0"
chrono = "^0.4.0"
faccess = "^0.2.0"
itertools = "^0.10.0"
miette = "^3.0.0"
nom = "^7.0.0"
smallvec = "^1.5.0"
thiserror = "^1.0.0"
titlecase = "^1.1.0"
unicode-width = "^0.1.0"

[dependencies.wax]
version = "^0.3.0"
default-features = false
features = ["diagnostics"]

[dependencies.blake3]
version = "^1.0.0"
optional = true

[dependencies.md5]
version = "^0.7.0"
optional = true
