[package]
name = "nym"
version = "0.1.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Manipulate files en masse using patterns."
repository = "https://github.com/olson-sean-k/nym"
readme = "../README.md"
edition = "2018"
license = "MIT"
keywords = [
    "glob",
    "pattern",
    "regex"
]
categories = [
    "filesystem"
]

[features]
default = [
    'property-b3sum',
    'property-md5sum',
]
property-b3sum = ['blake3']
property-md5sum = ['md5']

[dependencies]
bimap = "^0.6.0"
bstr = "^0.2.0"
chrono = "^0.4.0"
faccess = "^0.2.0"
itertools = "^0.10.0"
nom = "^6.1.0"
os_str_bytes = "^6.4.0"
regex = "^1.5.0"
smallvec = "^1.5.0"
thiserror = "^1.0.0"
titlecase = "^1.1.0"
unicode-width = "^0.1.0"
walkdir = "^2.3.0"

[dependencies.blake3]
version = "^1.0.0"
optional = true

[dependencies.md5]
version = "^0.7.0"
optional = true

[target.'cfg(target_os = "windows")'.dependencies.path-slash]
version = "^0.1.0"
